# midi-bt-controller-synth

./: .gitignore  README.md  gradlew  gradlew.bat  local.properties  settings.gradle.kts  todos.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SynthManager.cpp  SynthManager.h
app/src/main/cpp/fluidsynth/: README.md
app/src/main/cpp/fluidsynth/lib/x86/pkgconfig/: fluidsynth.pc
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/fluidsynth/: FluidSynthConfig.cmake
app/src/main/java/com/midibt/controller/: MainActivity.kt  SynthEditorActivity.kt
app/src/main/java/com/midibt/controller/midi/: BluetoothMidiScanner.kt  MidiController.kt
app/src/main/java/com/midibt/controller/synth/: SoundBank.kt  SynthEngine.kt
app/src/main/java/com/midibt/controller/ui/: DeviceAdapter.kt  MainViewModel.kt  OscilloscopeView.kt  SoundBankAdapter.kt
app/src/main/res/drawable/: circle_indicator_connected.xml
app/src/main/res/layout/: activity_main.xml  activity_synth_editor.xml  item_sound_bank.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: setup_fluidsynth.bat  setup_fluidsynth.sh
